Fix gap at top of participate page
This just HTML for the new client side flash images not being fully hidden.
- Add extra class to client side flash messages to hide at start
- Set margin-bottom 0 for all flash messages

Bug: T226310

--- a/isa/static/css/main.css
+++ b/isa/static/css/main.css
@@ -350,6 +350,12 @@ select.selectpicker> option, .nav-item.dropdown .dropdown-menu  {
     z-index: 1;
     position: sticky;
     top:0px;
+    margin-bottom: 0px;
+}
+
+/*client side messsages need to be hidden initially*/
+.client-flash-message {
+    display: none;
 }
 
 /*end participate page/*
